--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="hero-overlay">
       <div class="hero-content">
         <div class="logo-hero" aria-label="Logo Cáceres Álvarez Abogados">
-          <img src="logo1.jpeg" alt="Cáceres Álvarez Abogados — Logo dorado">
+          <img src="logo1.jpg" alt="Cáceres Álvarez Abogados — Logo dorado">
         </div>
 
         <p class="since">SINCE 1999</p>
@@ -231,7 +231,7 @@
   <footer class="footer">
     <div class="wrap">
       <div class="footer-brand">
-        <img src="logo1.jpeg" alt="Cáceres Álvarez Abogados — Logo dorado">
+        <img src="logo1.jpg" alt="Cáceres Álvarez Abogados — Logo dorado">
       </div>
       <p class="copy">© 2025 Cáceres Álvarez Abogados. Todos los derechos reservados.</p>
     </div>
@@ -243,6 +243,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
