--- a/gracias.html
+++ b/gracias.html
@@ -1,58 +1,171 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gracias - Caceres Alvarez y Asociados</title>
-  <link rel="stylesheet" href="estilos.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Gracias — Cáceres Álvarez Abogados</title>
+  <meta name="robots" content="noindex" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      background-color: #f4f7fb;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      text-align: center;
-      color: #0F2630;
+    :root{
+      --bg: #0a0b0d;
+      --panel: #121319;
+      --text: #E8EAF0;
+      --muted:#A4ADBA;
+      --gold:#D4AF37;
+      --gold-2:#F1D885;
+      --radius: 16px;
+      --shadow: 0 18px 50px rgba(0,0,0,.45);
     }
-    .container {
-      background: #fff;
-      padding: 40px;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-      max-width: 500px;
-      width: 90%;
+    *{box-sizing:border-box}
+    html,body{margin:0;padding:0}
+    body{
+      font-family:'Inter',system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      color:var(--text);
+      min-height:100vh;
+      display:grid;
+      place-items:center;
+      background:
+        radial-gradient(1100px 800px at 60% -10%, #141821 0%, #0c0e13 55%, #090b0e 100%),
+        linear-gradient(180deg,#0b0d12 0%, #0a0b0d 100%);
     }
-    h1 {
-      color: #0F2630;
-      margin-bottom: 20px;
+    .card{
+      width:min(92vw,780px);
+      background:
+        radial-gradient(900px 600px at 100% 0%, rgba(212,175,55,.08) 0%, rgba(14,16,22,0) 65%),
+        linear-gradient(180deg,#151923 0%, #11151d 100%);
+      border:1px solid rgba(212,175,55,.16);
+      border-radius:var(--radius);
+      box-shadow:var(--shadow);
+      padding:36px 28px;
+      text-align:center;
+      position:relative;
+      overflow:hidden;
     }
-    p {
-      margin-bottom: 30px;
-      font-size: 18px;
+    .logo{
+      width:140px;height:140px;margin:0 auto 10px;
+      filter:drop-shadow(0 12px 26px rgba(212,175,55,.28));
     }
-    a.button {
-      background-color: #0F2630;
-      color: #F4E9C6;
-      padding: 12px 25px;
-      border-radius: 6px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: background 0.3s ease;
+    .logo img{width:100%;height:100%;object-fit:contain;display:block}
+    h1{
+      font-family:'Playfair Display',serif;
+      margin:10px 0 8px;
+      font-size:clamp(1.6rem,1.2rem + 1.6vw,2.3rem);
+      color:#fff;
+      letter-spacing:.02em;
+      text-shadow:0 2px 16px rgba(0,0,0,.35);
     }
-    a.button:hover {
-      background-color: #1f3d4d;
+    p.lead{margin:0 0 14px;color:var(--muted);font-size:1.05rem}
+    .ref{
+      margin:10px auto 22px;
+      padding:10px 14px;
+      background:rgba(212,175,55,.10);
+      border:1px solid rgba(212,175,55,.22);
+      color:#e9e1c0;
+      width:max-content;
+      border-radius:999px;
+      font-weight:600;
+      letter-spacing:.06em;
+    }
+    .row{display:flex;gap:12px;flex-wrap:wrap;justify-content:center}
+    .btn{
+      display:inline-block;
+      padding:12px 22px;
+      border-radius:32px;
+      font-weight:700;
+      text-decoration:none;
+      transition:transform .06s ease, background .2s ease, color .2s ease, box-shadow .2s ease;
+    }
+    .btn-primary{
+      background:var(--gold);
+      color:#0b0c10;
+      box-shadow:0 12px 28px rgba(212,175,55,.25);
+    }
+    .btn-primary:hover{background:#e2c661;transform:translateY(-1px)}
+    .btn-ghost{
+      color:var(--gold-2);
+      border:2px solid rgba(212,175,55,.35);
+      background:transparent;
+    }
+    .btn-ghost:hover{background:rgba(212,175,55,.12)}
+    .foot{
+      margin-top:22px;
+      color:#96a1af;
+      font-size:.95rem;
+    }
+    /* mini confetti sutil */
+    .spark{
+      position:absolute; width:6px; height:6px; border-radius:50%;
+      background:var(--gold);
+      filter:blur(.2px);
+      opacity:.0;
+      animation: pop 1.8s ease-out forwards;
+    }
+    @keyframes pop{
+      0%{transform:translate(0,0) scale(.6); opacity:0}
+      15%{opacity:1}
+      100%{transform:translate(var(--tx), var(--ty)) scale(0.9); opacity:0}
+    }
+    @media (max-width:560px){
+      .card{padding:28px 20px}
+      .logo{width:120px;height:120px}
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>¡Gracias por tu mensaje!</h1>
-    <p>Hemos recibido tu consulta y nos pondremos en contacto contigo a la brevedad.</p>
-    <a href="index.html" class="button">Volver al inicio</a>
-  </div>
+
+  <main class="card" role="status" aria-live="polite">
+    <div class="logo">
+      <!-- usa el mismo logo dorado -->
+      <img src="logo1.jpeg" alt="Cáceres Álvarez Abogados">
+    </div>
+
+    <h1>¡Gracias por tu consulta!</h1>
+    <p class="lead">
+      Recibimos tu mensaje correctamente. Un abogado de nuestro estudio se pondrá en
+      contacto contigo a la brevedad.
+    </p>
+
+    <div class="ref">N.º de referencia: <span id="ref"></span></div>
+
+    <div class="row" role="group" aria-label="Acciones">
+      <a href="/" class="btn btn-primary">Volver al inicio</a>
+      <a href="https://wa.me/595971872841" target="_blank" class="btn btn-ghost" rel="noopener">Escribir por WhatsApp</a>
+    </div>
+
+    <p class="foot" id="autoredir">Serás redirigido al inicio en unos segundos…</p>
+  </main>
+
+  <script>
+    // Genera una referencia corta tipo ABC-1234
+    const ref = Math.random().toString(36).slice(2, 6).toUpperCase() + "-" +
+                Math.floor(1000 + Math.random()*9000);
+    document.getElementById('ref').textContent = ref;
+
+    // Mini confetti dorado sutil
+    const card = document.querySelector('.card');
+    for (let i=0;i<18;i++){
+      const s = document.createElement('span');
+      s.className = 'spark';
+      const x = (Math.random()*2-1)*180; // -180..180
+      const y = (Math.random()*2-1)*120; // -120..120
+      s.style.left = (card.clientWidth/2) + 'px';
+      s.style.top  = (card.clientHeight/3) + 'px';
+      s.style.setProperty('--tx', x+'px');
+      s.style.setProperty('--ty', y+'px');
+      s.style.animationDelay = (Math.random()*0.35)+'s';
+      s.style.background = i%3 ? 'rgba(241,216,133,.95)' : 'rgba(212,175,55,.95)';
+      card.appendChild(s);
+    }
+
+    // Autoredirección a home después de 6 segundos
+    const targetURL = (location.origin || '') + '/';
+    setTimeout(()=>{ window.location.href = targetURL; }, 6000);
+
+    // Si no hay origin (ej. file://), quita el texto de autoredirección
+    if (!location.origin) {
+      document.getElementById('autoredir').textContent = '';
+    }
+  </script>
 </body>
 </html>
