--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
         </div>
 
         <p class="since">SINCE 1999</p>
-        <h1 class="tagline">Comprometidos con tu justicia</h1>
+       <h1 class="tagline tagline--double" aria-label="Integridad y soluciones legales. Asesoría confiable">
+  <span>Integridad y soluciones legales</span>
+  <span class="accent">Asesoría confiable</span>
+</h1>
 
         <div class="cta-row">
           <a class="btn btn-primary" href="#contacto">Solicitá una consulta</a>
@@ -143,6 +146,30 @@
               <p>Resolución alternativa de conflictos mediante negociación, conciliación y arbitraje institucional.</p>
             </div>
           </article>
+          <!-- Derecho Marítimo -->
+<article class="card" tabindex="0" aria-expanded="false">
+  <h4>Derecho Marítimo</h4>
+  <div class="detalle" hidden>
+    <p>Asesoría en contratos de fletamento, transporte y logística, seguros, embargo y limitación de responsabilidad, reclamaciones por avería y daños de carga.</p>
+  </div>
+</article>
+
+<!-- Derecho Ambiental -->
+<article class="card" tabindex="0" aria-expanded="false">
+  <h4>Derecho Ambiental</h4>
+  <div class="detalle" hidden>
+    <p>Cumplimiento normativo, evaluaciones de impacto, licencias y permisos, defensas administrativas y judiciales, y estrategias de sostenibilidad empresarial.</p>
+  </div>
+</article>
+
+<!-- Derecho Deportivo -->
+<article class="card" tabindex="0" aria-expanded="false">
+  <h4>Derecho Deportivo</h4>
+  <div class="detalle" hidden>
+    <p>Contratos de deportistas y cuerpos técnicos, transferencias, patrocinio, imagen, resolución de disputas ante federaciones y tribunales arbitrales.</p>
+  </div>
+</article>
+
         </div>
       </div>
     </section>
@@ -247,6 +274,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
