--- a/gracias.html
+++ b/gracias.html
@@ -117,7 +117,7 @@
   <main class="card" role="status" aria-live="polite">
     <div class="logo">
       <!-- usa el mismo logo dorado -->
-      <img src="logo1.jpeg" alt="Cáceres Álvarez Abogados">
+      <img src="logo1.jpg" alt="Cáceres Álvarez Abogados">
     </div>
 
     <h1>¡Gracias por tu consulta!</h1>
@@ -169,3 +169,4 @@
   </script>
 </body>
 </html>
+
