--- a/index.html
+++ b/index.html
@@ -214,9 +214,10 @@
           <div>
             <p><strong>Teléfono:</strong> +595 971 872841 — +595 872842</p>
             <p><strong>Dirección:</strong> Hernandarias y Félix Pérez Cardozo, Lambaré</p>
+             <p><strong>Correo:</strong> info@caceresalvarezabogados.com.py</p>
 
 <form
-  action="https://formsubmit.co/caceresalvarezabogados@gmail.com"
+  action="https://formsubmit.co/info@caceresalvarezabogados.com.py"
   method="POST"
   accept-charset="UTF-8"
   enctype="application/x-www-form-urlencoded"
@@ -274,6 +275,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
