--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <!-- ÁREAS -->
     <section id="servicios" class="section">
       <div class="wrap">
-        <h2 class="h">Áreas de práctica</h2>
+        <h2 class="h">Áreas de actuación de nuestros abogados</h2>
         <p class="lead">Asesoría estratégica y representación en las principales ramas del derecho.</p>
 
         <div class="cards">
@@ -275,6 +275,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
