--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <a href="https://wa.me/595981123456" class="whatsapp-btn" target="_blank" title="Contactar por WhatsApp">
+    <a href="https://wa.me/595971872841" class="whatsapp-btn" target="_blank" title="Contactar por WhatsApp">
         <i class="fab fa-whatsapp"></i>
     </a>
 
@@ -110,7 +110,7 @@
             <div class="contact-box">
                 <div class="info">
                     <p><i class="fas fa-map-marker-alt"></i> Asunción, Paraguay</p>
-                    <p><i class="fas fa-phone"></i> +595 981 XXX XXX</p>
+                    <p><i class="fas fa-phone"></i> +595 971 872841 </p>
                     <p><i class="fas fa-envelope"></i> info@caceresalvarez.com.py</p>
                     <div class="social-links-footer">
                         <a href="#"><i class="fab fa-instagram"></i></a>
@@ -134,3 +134,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
