Modify location section and contact form button text
Updated the location section and adjusted contact form button text.

--- a/index.html
+++ b/index.html
@@ -96,13 +96,17 @@
     </section>
 
     <section id="ubicacion" class="section">
-        <div class="container">
-            <h2 class="title-serif">Ubicación Estratégica</h2>
-            <div class="map-container">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d57693.30397500589!2d-57.62534065!3d-25.282197!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x945da7a33bf63943%3A0xc6659f81237e583d!2sAsunci%C3%B3n!5e0!3m2!1ses!2spy!4v1700000000000!5m2!1ses!2spy" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div>
+    <div class="container">
+        <h2 class="title-serif">Nuestra Ubicación</h2>
+        <div class="map-container">
+            <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14425.968051662914!2d-57.6322079!3d-25.3323049!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x945da9336d370f6d%3A0xf639a041f0f37c3!2sLambar%C3%A9%2C%20Paraguay!5e0!3m2!1ses!2s!4v1700000000000!5m2!1ses!2s" 
+                width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+            </iframe>
         </div>
-    </section>
+    </div>
+</section>
+
 
     <section id="contacto" class="section">
         <div class="container">
@@ -121,7 +125,7 @@
                     <input type="text" placeholder="Su Nombre" required>
                     <input type="email" placeholder="Su Email" required>
                     <textarea placeholder="¿Cómo podemos asistirle?" rows="4"></textarea>
-                    <button type="submit" class="btn-gold-full">Solicitar Entrevista</button>
+                    <button type="submit" class="btn-gold-full">Solicitar contacto</button>
                 </form>
             </div>
         </div>
@@ -134,4 +138,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
