--- a/index.html
+++ b/index.html
@@ -100,12 +100,13 @@
         <h2 class="title-serif">Nuestra Ubicación</h2>
         <div class="map-container">
             <iframe 
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14425.968051662914!2d-57.6322079!3d-25.3323049!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x945da9336d370f6d%3A0xf639a041f0f37c3!2sLambar%C3%A9%2C%20Paraguay!5e0!3m2!1ses!2s!4v1700000000000!5m2!1ses!2s" 
+                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3604.7551000!2d-57.6045000!3d-25.3573000!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2spy!4v1700000000000!5m2!1ses!2spy" 
                 width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy">
             </iframe>
         </div>
     </div>
 </section>
+
 
 
     <section id="contacto" class="section">
@@ -138,5 +139,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
