--- a/index.html
+++ b/index.html
@@ -99,10 +99,7 @@
     <div class="container">
         <h2 class="title-serif">Nuestra Ubicación</h2>
         <div class="map-container">
-            <iframe 
-                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d267.9758819630071!2d-57.609346547080584!3d-25.356588242268685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2spy!4v1767348031569!5m2!1ses-419!2spy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" 
-                width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy">
-            </iframe>
+            mi link de ubicacion es este <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d267.9758819630071!2d-57.609346547080584!3d-25.356588242268685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2spy!4v1767348031569!5m2!1ses-419!2spy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
 </section>
@@ -139,6 +136,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
