Modify location section with new map iframe
Updated the location section to include a new map iframe.

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                     <h3>Derecho Comercial</h3>
                     <p>Constitución de sociedades, gobierno corporativo y defensa de intereses empresariales en transacciones estratégicas.</p>
                 </div>
-                <i class="fas fa-users icon-card"></i>
                 <div class="card">
+                    <i class="fas fa-users icon-card"></i>
                     <h3>Niñez y Adolescencia</h3>
                     <p>Protección jurídica del interés superior del menor, regímenes de convivencia y procesos de asistencia alimentaria.</p>
                 </div>
@@ -95,6 +95,14 @@
         </div>
     </section>
 
+    <section id="ubicacion" class="section">
+        <div class="container">
+            <h2 class="title-serif">Ubicación Estratégica</h2>
+            <div class="map-container">
+                <iframe src="https://maps.google.com/?cid=8594560823744271806&g_mp=Cidnb29nbGUubWFwcy5wbGFjZXMudjEuUGxhY2VzLlNlYXJjaFRleHQ9" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </section>
     <section id="ubicacion" class="section">
     <div class="container">
         <h2 class="title-serif">Nuestra Ubicación</h2>
@@ -136,6 +144,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
