Revise contact section details and form fields
Updated contact information and form fields in the contact section.

--- a/index.html
+++ b/index.html
@@ -107,29 +107,29 @@
 
 
 
-    <section id="contacto" class="section">
-        <div class="container">
-            <h2 class="title-serif">Contacto</h2>
-            <div class="contact-box">
-                <div class="info">
-                    <p><i class="fas fa-map-marker-alt"></i> Lambare, Paraguay</p>
-                    <p><i class="fas fa-phone"></i> +595 971 872841 </p>
-                    <p><i class="fas fa-envelope"></i> info@caceresalvarez.com.py</p>
-                    <div class="social-links-footer">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                    </div>
+  <section id="contacto" class="section">
+    <div class="container">
+        <h2 class="title-serif">Contacto</h2>
+        <div class="contact-box">
+            <div class="info">
+                <p><i class="fas fa-map-marker-alt"></i> Félix Pérez Cardozo, Lambaré, Paraguay</p>
+                <p><i class="fas fa-phone"></i> +595 971 872841</p>
+                <p><i class="fas fa-envelope"></i> info@caceresalvarez.com.py</p>
+                <div class="social-links-footer">
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-linkedin"></i></a>
                 </div>
-                <form class="elegant-form">
-                    <input type="text" placeholder="Su Nombre" required>
-                    <input type="email" placeholder="Su Email" required>
-                    <textarea placeholder="¿Cómo podemos asistirle?" rows="4"></textarea>
-                    <button type="submit" class="btn-gold-full">Solicitar contacto</button>
-                </form>
             </div>
+            <form class="elegant-form">
+                <input type="text" placeholder="Nombre y Apellido" required>
+                <input type="email" placeholder="Correo Electrónico" required>
+                <input type="tel" placeholder="Teléfono / WhatsApp" required>
+                <textarea placeholder="¿En qué área legal necesita asesoramiento?" rows="4"></textarea>
+                <button type="submit" class="btn-gold-full">Solicitar Entrevista</button>
+            </form>
         </div>
-    </section>
-
+    </div>
+</section>
     <footer class="footer">
         <p>&copy; 2026 Cáceres Álvarez Abogados. Todos los derechos reservados.</p>
     </footer>
@@ -137,6 +137,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
