--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 
     <nav class="navbar">
         <div class="logo">
-            <span class="gold-text">CÁCERES ÁLVAREZ</span>
-            <small>ABOGADOS</small>
+            <img src="logo1.jpg" alt="Logo Cáceres Álvarez" style="height: 50px; margin-right: 15px; vertical-align: middle;">
+            <div style="display: inline-block; vertical-align: middle;">
+                <span class="gold-text">CÁCERES ÁLVAREZ</span>
+                <small style="display: block; font-size: 10px; letter-spacing: 2px;">ABOGADOS</small>
+            </div>
         </div>
         <ul class="nav-links">
             <li><a href="#inicio">Inicio</a></li>
@@ -74,7 +77,7 @@
                 <div class="card">
                     <i class="fas fa-file-invoice-dollar icon-card"></i>
                     <h3>Sucesiones</h3>
-                    <p>Gestión de herencias, testamentos y procesos sucesorios, garantizando una transición patrimonial ordenada y justa.</p>
+                    <p>Gestión de herencias, testamentos y procesos sucesorios, garantizando una transición patrimonial ordenada.</p>
                 </div>
                 <div class="card">
                     <i class="fas fa-user-friends icon-card"></i>
@@ -89,7 +92,12 @@
                 <div class="card">
                     <i class="fas fa-handshake icon-card"></i>
                     <h3>Mediación y Arbitraje</h3>
-                    <p>Solución alternativa de conflictos para alcanzar acuerdos beneficiosos sin necesidad de llegar a instancias judiciales.</p>
+                    <p>Solución alternativa de conflictos para alcanzar acuerdos beneficiosos sin necesidad de instancias judiciales.</p>
+                </div>
+                <div class="card">
+                    <i class="fas fa-balance-scale icon-card"></i>
+                    <h3>Servicios Integrales</h3>
+                    <p>Brindamos asesoramiento en diversas ramas del derecho, adaptándonos a las necesidades específicas de cada caso.</p>
                 </div>
             </div>
         </div>
@@ -137,6 +145,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
